parser - string interpolation WIP